--- a/01_Python_Grammar/맹'S/02_Control_Statement_Practice.ipynb
+++ b/01_Python_Grammar/맹'S/02_Control_Statement_Practice.ipynb
@@ -26,7 +26,12 @@
     "id": "876ead4f"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# 거짓이므로 미츨력\n",
+    "# 거짓이므로 미출력\n",
+    "# 참이므로 출력\n",
+    "# 참이지만 실행 안됨"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -49,14 +54,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "e465d2d1",
    "metadata": {
     "id": "e465d2d1"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "166833\n"
+     ]
+    }
+   ],
    "source": [
-    "\n"
+    "result = 0\n",
+    "i = 1\n",
+    "while i <= 1000:\n",
+    "    if i % 3 == 0:  # 3으로 나누어 떨어지는 수는 3의 배수\n",
+    "        result += i\n",
+    "    i += 1\n",
+    "print(result) # 166833 출력\n"
    ]
   },
   {
@@ -78,13 +97,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "a10b8c46",
    "metadata": {
     "id": "a10b8c46"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*\n",
+      "**\n",
+      "***\n",
+      "****\n",
+      "*****\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = 1\n",
+    "while i < 6:\n",
+    "    print('*'*i)\n",
+    "    i += 1"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -102,13 +138,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "386de29b",
    "metadata": {
     "id": "386de29b"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "101\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "for i in (1,101):\n",
+    "    print(i)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -131,13 +180,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "6c3fdeb4",
    "metadata": {
     "id": "6c3fdeb4"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "79.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "A = [70, 60, 55, 75, 95, 90, 80, 80, 85, 100]\n",
+    "total = 0\n",
+    "for score in A:\n",
+    "    total += score # A학급의 점수를 모두 더한다.\n",
+    "average = total / len(A) # 평균을 구하기 위해 총 점수를 총 학생수로 나눈다.\n",
+    "print(average)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -149,7 +213,7 @@
     "# Q6 리스트 중에서 홀수에만 2를 곱하여 저장하는 다음 코드가 있다.\n",
     "```\n",
     "numbers = [1, 2, 3, 4, 5]\n",
-    "result = []\n",
+    "result = [n*2 for n in numbers if n % 2 == 1]\n",
     "for n in numbers:\n",
     "if n % 2 == 1:\n",
     "    result.append(n*2)\n",
@@ -164,13 +228,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "cf9aee67",
    "metadata": {
     "id": "cf9aee67"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 6, 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "numbers = [1, 2, 3, 4, 5]\n",
+    "result = [n*2 for n in numbers if n% 2 == 1]\n",
+    "print(result)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -184,6 +260,14 @@
     "- 소설가 김연수\n",
     "```"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c29cf72d-8d84-405d-8997-fbfce184a0bd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
