--- a/01_Python_Grammar/숙제/0910 숙제.ipynb
+++ b/01_Python_Grammar/숙제/0910 숙제.ipynb
@@ -1210,7 +1210,7 @@
     "f.write(\"005930 삼성전자\\n\")\n",
     "f.write(\"005380 현대차\\n\")\n",
     "f.write(\"035420 NAVER\\n\")\n",
-    "f.close()"
+    "f.close "
    ]
   },
   {
